<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_add_friend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightPrimary"
    android:orientation="vertical"
    tools:context=".pages.friends.AddFriendFragment">


    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/friends_add_mail"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/friends_add_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/friends_add_alias"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnFriendSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_friends_send" />
</LinearLayout>